--- a/hybrid/PhonegapUpload/platforms/android/build.gradle
+++ b/hybrid/PhonegapUpload/platforms/android/build.gradle
@@ -30,7 +30,7 @@ buildscript {
     // installed version of Gradle. This dependency is documented at
     // http://tools.android.com/tech-docs/new-build-system/version-compatibility
     // and https://issues.apache.org/jira/browse/CB-8143
-    /*if (gradle.gradleVersion >= "2.2") {
+    if (gradle.gradleVersion >= "2.2") {
         dependencies {
             classpath 'com.android.tools.build:gradle:1.0.0+'
         }
@@ -42,9 +42,6 @@ buildscript {
         dependencies {
             classpath 'com.android.tools.build:gradle:0.12.0+'
         }
-    }*/
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
 
