--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "es6"
   ],
   "dependencies": {
+    "axios": "^0.5.4",
     "hammerjs": "^2.0.4",
     "jquery": "^2.1.3",
     "lodash": "^3.7.0",
     "materialize-css": "^0.96.1",
-    "react": "^0.13.2"
+    "react": "^0.13.2",
+    "rsvp": "^3.0.18"
   },
   "devDependencies": {
     "babel": "^5.1.11",
