--- a/package.json
+++ b/package.json
@@ -25,36 +25,40 @@
   ],
   "dependencies": {
     "axios": "^0.5.4",
+    "flux": "^2.0.3",
     "hammerjs": "^2.0.4",
     "jquery": "^2.1.3",
+    "keymirror": "^0.1.1",
     "lodash": "^3.7.0",
     "materialize-css": "^0.96.1",
+    "object-assign": "^3.0.0",
     "react": "^0.13.2",
-    "rsvp": "^3.0.18"
+    "rsvp": "^3.0.18",
+    "setimmediate": "^1.0.2"
   },
   "devDependencies": {
-    "babel": "^5.1.11",
-    "babel-core": "^5.1.11",
-    "babel-loader": "^5.0.0",
-    "css-loader": "^0.11.2",
-    "es5-shim": "^4.1.1",
-    "file-loader": "^0.8.1",
-    "imports-loader": "^0.6.3",
+    "babel": "^5.5.7",
+    "babel-core": "^5.5.7",
+    "babel-loader": "^5.1.4",
+    "css-loader": "^0.14.5",
+    "es5-shim": "^4.1.6",
+    "file-loader": "^0.8.4",
+    "imports-loader": "^0.6.4",
     "jasmine": "^2.2.1",
     "jasmine-core": "^2.2.0",
-    "jshint": "^2.6.0",
+    "jshint": "^2.8.0",
     "jsx-loader": "^0.13.1",
     "jsxhint": "^0.14.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-webpack": "^1.5.0",
-    "node-sass": "^2.1.1",
-    "sass-loader": "^0.6.0",
-    "style-loader": "^0.11.0",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.8.9",
-    "webpack-dev-server": "^1.8.2"
+    "node-sass": "^3.2.0",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "license": "MIT"
 }
